parse/JDMatcherParser.py
# Generated from JDMatcher.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JDMatcherParser ( Parser ):

    grammarFileName = "JDMatcher.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'years'", "'list all CVs for job'", "'show top'", 
                     "'show CV with'", "'best CV for'", "'and'", "'REQUIREMENTS'", 
                     "'PREFERENCES'", "'position:'", "'level:'", "'stack'", 
                     "'education'", "'language:'", "'activities:'", "'experience:'", 
                     "'references:'", "'tools:'", "'programming languages:'", 
                     "'framework libraries:'", "'databases cloud services:'", 
                     "'major:'", "'degree:'", "'gpa:'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "LIST_CV", "SHOW_TOP", "SHOW_CV_WITH", 
                      "BEST_FOR", "AND", "REQUIRE_SECTION", "PREFER_SECTION", 
                      "POSITION_LABEL", "LEVEL_LABEL", "STACK_SECTION", 
                      "EDU_SECTION", "LANG_LABEL", "ACTIVITY_LABEL", "EXP_LABEL", 
                      "REF_LABEL", "TOOL_LABEL", "PROG_LANG_LABEL", "FRAMEWORK_LABEL", 
                      "DATA_LABEL", "MAJOR_LABEL", "DEGREE_LABEL", "GPA_LABEL", 
                      "OPEN_CURLY", "CLOSE_CURLY", "POSITION", "LEVEL", 
                      "DEGREE", "MAJOR", "COMPARATOR", "LANGUAGE", "INT", 
                      "FLOAT", "ID", "WS" ]

    RULE_program = 0
    RULE_listCV = 1
    RULE_showConditional = 2
    RULE_show_X_best = 3
    RULE_jd = 4
    RULE_requirements = 5
    RULE_preferences = 6
    RULE_requirePosition = 7
    RULE_requireLevel = 8
    RULE_requireTechnicalSkills = 9
    RULE_requireTools = 10
    RULE_requireProLang = 11
    RULE_requireFrameworks = 12
    RULE_requireDB = 13
    RULE_requireEducation = 14
    RULE_requireMajor = 15
    RULE_requireDegree = 16
    RULE_requireGPA = 17
    RULE_requireExperience = 18
    RULE_requireLanguage = 19
    RULE_requireActivites = 20
    RULE_requireReferences = 21

    ruleNames =  [ "program", "listCV", "showConditional", "show_X_best", 
                   "jd", "requirements", "preferences", "requirePosition", 
                   "requireLevel", "requireTechnicalSkills", "requireTools", 
                   "requireProLang", "requireFrameworks", "requireDB", "requireEducation", 
                   "requireMajor", "requireDegree", "requireGPA", "requireExperience", 
                   "requireLanguage", "requireActivites", "requireReferences" ]

    EOF = Token.EOF
    T__0=1
    LIST_CV=2
    SHOW_TOP=3
    SHOW_CV_WITH=4
    BEST_FOR=5
    AND=6
    REQUIRE_SECTION=7
    PREFER_SECTION=8
    POSITION_LABEL=9
    LEVEL_LABEL=10
    STACK_SECTION=11
    EDU_SECTION=12
    LANG_LABEL=13
    ACTIVITY_LABEL=14
    EXP_LABEL=15
    REF_LABEL=16
    TOOL_LABEL=17
    PROG_LANG_LABEL=18
    FRAMEWORK_LABEL=19
    DATA_LABEL=20
    MAJOR_LABEL=21
    DEGREE_LABEL=22
    GPA_LABEL=23
    OPEN_CURLY=24
    CLOSE_CURLY=25
    POSITION=26
    LEVEL=27
    DEGREE=28
    MAJOR=29
    COMPARATOR=30
    LANGUAGE=31
    INT=32
    FLOAT=33
    ID=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listCV(self):
            return self.getTypedRuleContext(JDMatcherParser.ListCVContext,0)


        def jd(self):
            return self.getTypedRuleContext(JDMatcherParser.JdContext,0)


        def show_X_best(self):
            return self.getTypedRuleContext(JDMatcherParser.Show_X_bestContext,0)


        def showConditional(self):
            return self.getTypedRuleContext(JDMatcherParser.ShowConditionalContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = JDMatcherParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JDMatcherParser.LIST_CV]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.listCV()
                pass
            elif token in [JDMatcherParser.REQUIRE_SECTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.jd()
                pass
            elif token in [JDMatcherParser.SHOW_TOP]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.show_X_best()
                pass
            elif token in [JDMatcherParser.SHOW_CV_WITH]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.showConditional()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCVContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIST_CV(self):
            return self.getToken(JDMatcherParser.LIST_CV, 0)

        def POSITION(self):
            return self.getToken(JDMatcherParser.POSITION, 0)

        def getRuleIndex(self):
            return JDMatcherParser.RULE_listCV

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListCV" ):
                listener.enterListCV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListCV" ):
                listener.exitListCV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListCV" ):
                return visitor.visitListCV(self)
            else:
                return visitor.visitChildren(self)




    def listCV(self):

        localctx = JDMatcherParser.ListCVContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_listCV)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(JDMatcherParser.LIST_CV)
            self.state = 51
            self.match(JDMatcherParser.POSITION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW_CV_WITH(self):
            return self.getToken(JDMatcherParser.SHOW_CV_WITH, 0)

        def requirePosition(self):
            return self.getTypedRuleContext(JDMatcherParser.RequirePositionContext,0)


        def AND(self):
            return self.getToken(JDMatcherParser.AND, 0)

        def requireLevel(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireLevelContext,0)


        def requireTools(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireDegreeContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireActivitesContext,0)


        def requireReferences(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireReferencesContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_showConditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowConditional" ):
                listener.enterShowConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowConditional" ):
                listener.exitShowConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShowConditional" ):
                return visitor.visitShowConditional(self)
            else:
                return visitor.visitChildren(self)




    def showConditional(self):

        localctx = JDMatcherParser.ShowConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_showConditional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(JDMatcherParser.SHOW_CV_WITH)
            self.state = 54
            self.requirePosition()
            self.state = 55
            self.match(JDMatcherParser.AND)
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JDMatcherParser.LEVEL_LABEL]:
                self.state = 56
                self.requireLevel()
                pass
            elif token in [JDMatcherParser.TOOL_LABEL]:
                self.state = 57
                self.requireTools()
                pass
            elif token in [JDMatcherParser.PROG_LANG_LABEL]:
                self.state = 58
                self.requireProLang()
                pass
            elif token in [JDMatcherParser.FRAMEWORK_LABEL]:
                self.state = 59
                self.requireFrameworks()
                pass
            elif token in [JDMatcherParser.DATA_LABEL]:
                self.state = 60
                self.requireDB()
                pass
            elif token in [JDMatcherParser.DEGREE_LABEL]:
                self.state = 61
                self.requireDegree()
                pass
            elif token in [JDMatcherParser.GPA_LABEL]:
                self.state = 62
                self.requireGPA()
                pass
            elif token in [JDMatcherParser.EXP_LABEL]:
                self.state = 63
                self.requireExperience()
                pass
            elif token in [JDMatcherParser.LANG_LABEL]:
                self.state = 64
                self.requireLanguage()
                pass
            elif token in [JDMatcherParser.ACTIVITY_LABEL]:
                self.state = 65
                self.requireActivites()
                pass
            elif token in [JDMatcherParser.REF_LABEL]:
                self.state = 66
                self.requireReferences()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_X_bestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW_TOP(self):
            return self.getToken(JDMatcherParser.SHOW_TOP, 0)

        def INT(self):
            return self.getToken(JDMatcherParser.INT, 0)

        def BEST_FOR(self):
            return self.getToken(JDMatcherParser.BEST_FOR, 0)

        def POSITION(self):
            return self.getToken(JDMatcherParser.POSITION, 0)

        def getRuleIndex(self):
            return JDMatcherParser.RULE_show_X_best

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_X_best" ):
                listener.enterShow_X_best(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_X_best" ):
                listener.exitShow_X_best(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow_X_best" ):
                return visitor.visitShow_X_best(self)
            else:
                return visitor.visitChildren(self)




    def show_X_best(self):

        localctx = JDMatcherParser.Show_X_bestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_show_X_best)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(JDMatcherParser.SHOW_TOP)
            self.state = 70
            self.match(JDMatcherParser.INT)
            self.state = 71
            self.match(JDMatcherParser.BEST_FOR)
            self.state = 72
            self.match(JDMatcherParser.POSITION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def requirements(self):
            return self.getTypedRuleContext(JDMatcherParser.RequirementsContext,0)


        def preferences(self):
            return self.getTypedRuleContext(JDMatcherParser.PreferencesContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_jd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJd" ):
                listener.enterJd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJd" ):
                listener.exitJd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJd" ):
                return visitor.visitJd(self)
            else:
                return visitor.visitChildren(self)




    def jd(self):

        localctx = JDMatcherParser.JdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_jd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.requirements()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.PREFER_SECTION:
                self.state = 75
                self.preferences()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REQUIRE_SECTION(self):
            return self.getToken(JDMatcherParser.REQUIRE_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(JDMatcherParser.OPEN_CURLY, 0)

        def requirePosition(self):
            return self.getTypedRuleContext(JDMatcherParser.RequirePositionContext,0)


        def requireLevel(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireLevelContext,0)


        def requireTechnicalSkills(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireTechnicalSkillsContext,0)


        def requireEducation(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireEducationContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireExperienceContext,0)


        def CLOSE_CURLY(self):
            return self.getToken(JDMatcherParser.CLOSE_CURLY, 0)

        def requireLanguage(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireActivitesContext,0)


        def requireReferences(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireReferencesContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_requirements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirements" ):
                listener.enterRequirements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirements" ):
                listener.exitRequirements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirements" ):
                return visitor.visitRequirements(self)
            else:
                return visitor.visitChildren(self)




    def requirements(self):

        localctx = JDMatcherParser.RequirementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_requirements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(JDMatcherParser.REQUIRE_SECTION)
            self.state = 79
            self.match(JDMatcherParser.OPEN_CURLY)
            self.state = 80
            self.requirePosition()
            self.state = 81
            self.requireLevel()
            self.state = 82
            self.requireTechnicalSkills()
            self.state = 83
            self.requireEducation()
            self.state = 84
            self.requireExperience()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.LANG_LABEL:
                self.state = 85
                self.requireLanguage()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.ACTIVITY_LABEL:
                self.state = 88
                self.requireActivites()


            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.REF_LABEL:
                self.state = 91
                self.requireReferences()


            self.state = 94
            self.match(JDMatcherParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreferencesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREFER_SECTION(self):
            return self.getToken(JDMatcherParser.PREFER_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(JDMatcherParser.OPEN_CURLY, 0)

        def CLOSE_CURLY(self):
            return self.getToken(JDMatcherParser.CLOSE_CURLY, 0)

        def requireTools(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireProLangContext,0)


        def requireFrameworks(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireDBContext,0)


        def requireDegree(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireDegreeContext,0)


        def requireGPA(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireGPAContext,0)


        def requireExperience(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireExperienceContext,0)


        def requireLanguage(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireLanguageContext,0)


        def requireActivites(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireActivitesContext,0)


        def requireReferences(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireReferencesContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_preferences

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreferences" ):
                listener.enterPreferences(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreferences" ):
                listener.exitPreferences(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreferences" ):
                return visitor.visitPreferences(self)
            else:
                return visitor.visitChildren(self)




    def preferences(self):

        localctx = JDMatcherParser.PreferencesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_preferences)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(JDMatcherParser.PREFER_SECTION)
            self.state = 97
            self.match(JDMatcherParser.OPEN_CURLY)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.TOOL_LABEL:
                self.state = 98
                self.requireTools()


            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.PROG_LANG_LABEL:
                self.state = 101
                self.requireProLang()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.FRAMEWORK_LABEL:
                self.state = 104
                self.requireFrameworks()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.DATA_LABEL:
                self.state = 107
                self.requireDB()


            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.DEGREE_LABEL:
                self.state = 110
                self.requireDegree()


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.GPA_LABEL:
                self.state = 113
                self.requireGPA()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.EXP_LABEL:
                self.state = 116
                self.requireExperience()


            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.LANG_LABEL:
                self.state = 119
                self.requireLanguage()


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.ACTIVITY_LABEL:
                self.state = 122
                self.requireActivites()


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.REF_LABEL:
                self.state = 125
                self.requireReferences()


            self.state = 128
            self.match(JDMatcherParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequirePositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POSITION_LABEL(self):
            return self.getToken(JDMatcherParser.POSITION_LABEL, 0)

        def POSITION(self):
            return self.getToken(JDMatcherParser.POSITION, 0)

        def getRuleIndex(self):
            return JDMatcherParser.RULE_requirePosition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequirePosition" ):
                listener.enterRequirePosition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequirePosition" ):
                listener.exitRequirePosition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequirePosition" ):
                return visitor.visitRequirePosition(self)
            else:
                return visitor.visitChildren(self)




    def requirePosition(self):

        localctx = JDMatcherParser.RequirePositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_requirePosition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(JDMatcherParser.POSITION_LABEL)
            self.state = 131
            self.match(JDMatcherParser.POSITION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireLevelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEVEL_LABEL(self):
            return self.getToken(JDMatcherParser.LEVEL_LABEL, 0)

        def LEVEL(self):
            return self.getToken(JDMatcherParser.LEVEL, 0)

        def getRuleIndex(self):
            return JDMatcherParser.RULE_requireLevel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireLevel" ):
                listener.enterRequireLevel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireLevel" ):
                listener.exitRequireLevel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequireLevel" ):
                return visitor.visitRequireLevel(self)
            else:
                return visitor.visitChildren(self)




    def requireLevel(self):

        localctx = JDMatcherParser.RequireLevelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_requireLevel)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(JDMatcherParser.LEVEL_LABEL)
            self.state = 134
            self.match(JDMatcherParser.LEVEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireTechnicalSkillsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STACK_SECTION(self):
            return self.getToken(JDMatcherParser.STACK_SECTION, 0)

        def OPEN_CURLY(self):
            return self.getToken(JDMatcherParser.OPEN_CURLY, 0)

        def requireTools(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireToolsContext,0)


        def requireProLang(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireProLangContext,0)


        def CLOSE_CURLY(self):
            return self.getToken(JDMatcherParser.CLOSE_CURLY, 0)

        def requireFrameworks(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireFrameworksContext,0)


        def requireDB(self):
            return self.getTypedRuleContext(JDMatcherParser.RequireDBContext,0)


        def getRuleIndex(self):
            return JDMatcherParser.RULE_requireTechnicalSkills

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireTechnicalSkills" ):
                listener.enterRequireTechnicalSkills(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireTechnicalSkills" ):
                listener.exitRequireTechnicalSkills(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRequireTechnicalSkills" ):
                return visitor.visitRequireTechnicalSkills(self)
            else:
                return visitor.visitChildren(self)




    def requireTechnicalSkills(self):

        localctx = JDMatcherParser.RequireTechnicalSkillsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_requireTechnicalSkills)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(JDMatcherParser.STACK_SECTION)
            self.state = 137
            self.match(JDMatcherParser.OPEN_CURLY)
            self.state = 138
            self.requireTools()
            self.state = 139
            self.requireProLang()
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.FRAMEWORK_LABEL:
                self.state = 140
                self.requireFrameworks()


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==JDMatcherParser.DATA_LABEL:
                self.state = 143
                self.requireDB()


            self.state = 146
            self.match(JDMatcherParser.CLOSE_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RequireToolsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TOOL_LABEL(self):
            return self.getToken(JDMatcherParser.TOOL_LABEL, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JDMatcherParser.ID)
            else:
                return self.getToken(JDMatcherParser.ID, i)

        def getRuleIndex(self):
            return JDMatcherParser.RULE_requireTools

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRequireTools" ):
                listener.enterRequireTools(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRequireTools" ):
                listener.exitRequireTools(self)
